// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composite > render > correct handles passing through component props and children 1`] = `
<div>
  <!---->
  <div>
    <div>
      I am A
    </div>
    <!---->
    <div>
      other text
    </div>
    <!---->
    <div>
      I am B
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`composite > render > render simple text as children 1`] = `
<div>
  <!---->
  <button
    class="my-button"
  >
    Click Me
    <!---->
  </button>
  <!---->
  
</div>
`;
